--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -8,7 +8,7 @@ on:
   #   branches:
   #     - master
   schedule:
-    - cron: 20 12 * * *
+    - cron: 0 0/6 * * *
   watch:
     types: started
     
